# scrypto-examples

./: .gitignore  README.md  check.sh  format.sh  lib.rs  package.json  test.py  test.sh
.github/workflows/: ci.yml  deploy.yml
core/cross-blueprint-call/: Cargo.toml  README.md
core/cross-blueprint-call/cross-extern-package/: Cargo.toml  README.md
core/cross-blueprint-call/cross-extern-package/src/: lib.rs
core/cross-blueprint-call/cross-intra-package/: Cargo.toml  README.md
core/cross-blueprint-call/cross-intra-package/src/: airdrop.rs  intra_package.rs  intra_package_local.rs  lib.rs
core/cross-blueprint-call/src/: airdrop.rs  cross_package.rs  intra_package.rs
core/cross-blueprint-call/tests/: lib.rs
core/flat-admin/: Cargo.toml  README.md
core/flat-admin/src/: lib.rs
core/flat-admin/tests/: lib.rs
core/gumball-machine/: Cargo.toml  README.md  script.sh
core/gumball-machine/src/: lib.rs
core/gumball-machine/tests/: lib.rs
core/hello-nft/: Cargo.toml  README.md
core/hello-nft/src/: lib.rs
core/hello-nft/tests/: lib.rs
core/hello-world/: Cargo.toml  README.md
core/hello-world/src/: lib.rs
core/hello-world/tests/: lib.rs
core/managed-access/: Cargo.toml  README.md
core/managed-access/src/: lib.rs
core/managed-access/tests/: lib.rs
core/no-std-lib/: Cargo.toml
core/payment-splitter/: Cargo.toml  README.md  build_rtm.sh
core/payment-splitter/raw_transactions/: adding_shareholders.rtm  component_creation.rtm  funding_the_splitter.rtm  withdrawing_owed_amount.rtm
core/payment-splitter/src/: lib.rs
core/payment-splitter/tests/: lib.rs
core/payment-splitter/transactions/: adding_shareholders.rtm  component_creation.rtm  funding_the_splitter.rtm  withdrawing_owed_amount.rtm
core/radix-name-service/: Cargo.toml  README.md  rns.revup
core/radix-name-service/src/: lib.rs
core/resource-creation/: Cargo.toml  README.md
core/resource-creation/src/: lib.rs
core/resource-creation/tests/: lib.rs
core/vesting/: Cargo.toml  README.md  build_rtm.sh
core/vesting/src/: beneficiary.rs  vesting.rs
core/vesting/tests/: lib.rs
core/vesting/transactions/: add_beneficiary.rtm  disable_termination.rtm  terminate_beneficiary.rtm  withdraw_funds.rtm
defi/: demo.sh
defi/auto-lend/: Cargo.toml
defi/auto-lend/src/: lib.rs
defi/auto-lend/tests/: lib.rs
defi/awesome-dex/: README.md
defi/basic-flash-loan/: Cargo.toml  README.md
defi/basic-flash-loan/src/: lib.rs
defi/basic-flash-loan/tests/: lib.rs
defi/limited-withdraw-vault/: Cargo.toml  README.md  build_rtm.sh  script.sh
defi/limited-withdraw-vault/src/: lib.rs
defi/limited-withdraw-vault/tests/: lib.rs
defi/limited-withdraw-vault/transactions/: adding_withdraw_authorities.rtm  component_creation.rtm  remove_withdraw_auth.rtm  withdraw_after_authorization_removal.rtm  withdraw_within_limit.rtm  withdraw_withtin_limit.rtm
defi/mutual-farm/: Cargo.toml
defi/mutual-farm/src/: lib.rs
defi/price-oracle/: Cargo.toml
defi/price-oracle/src/: lib.rs
defi/radiswap/: Cargo.toml  script.sh
defi/radiswap/src/: lib.rs
defi/radiswap/tests/: lib.rs
defi/regulated-token/: Cargo.toml
defi/regulated-token/src/: lib.rs
defi/synthetics/: Cargo.toml
defi/synthetics/src/: lib.rs
defi/synthetics/tests/: demo.sh
defi/tiered-fund/: Cargo.toml  README.md  build_rtm.sh  tx.rtm
defi/tiered-fund/src/: lib.rs
defi/tiered-fund/tests/: lib.rs
defi/x-perp-futures/: Cargo.toml
full-stack/: README.md
full-stack/connect-button-gumball-machine/: README.md  package.json
full-stack/dapp-radloan/: README.md  example-transaction.md
full-stack/dapp-toolkit-gumball-machine/: Dockerfile  README.md  package-lock.json  package.json  snowpack.config.mjs
full-stack/radiswap-svelte/: README.md
full-stack/wallet-sdk-gumball-machine/: README.md  package.json
full-stack/wallet-sdk-gumball-machine/scrypto/: Cargo.toml
full-stack/wallet-sdk-gumball-machine/scrypto/src/: lib.rs
nft/magic-card/: Cargo.toml  README.md
nft/nft-marketplace/: .gitignore  Cargo.toml  README.md
nft/sporting-event/: Cargo.toml
solidity_to_scrypto/Campaign/: README.md
(+126 files in other folders)
