[package]
name = "cross-blueprint-call"
version = "0.1.0"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", branch = "develop" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", branch = "develop" }

[dev-dependencies]
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", branch = "develop" }

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.

[lib]
crate-type = ["cdylib", "lib"]
