[package]
name = "vesting"
version = "0.1.0"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-2c48440f" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-2c48440f" }
regex = "1"

[dev-dependencies]
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-2c48440f" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-2c48440f" }
scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-2c48440f" }

[profile.release]
opt-level = 's'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = "debuginfo"    # Strip debug info.
overflow-checks = true # Panic in the case of an overflow.

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace