[package]
name = "mutual-farm"
version = "0.1.0"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "c948bba0565746ac324fc4b004149da6149b5a96" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "c948bba0565746ac324fc4b004149da6149b5a96" }

[dev-dependencies]
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "c948bba0565746ac324fc4b004149da6149b5a96" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "c948bba0565746ac324fc4b004149da6149b5a96" }
scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "c948bba0565746ac324fc4b004149da6149b5a96" }

[profile.release]
opt-level = 's'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = "debuginfo"    # Strip debug info.
overflow-checks = true # Panic in the case of an overflow.

[lib]
crate-type = ["cdylib", "lib"]
