[package]
name = "gumball_machine"
version = "0.1.0"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "betanet-v1-0848b1a51" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "betanet-v1-0848b1a51" }

[dev-dependencies]
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "betanet-v1-0848b1a51" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "betanet-v1-0848b1a51" }
scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "betanet-v1-0848b1a51" }

[profile.release]
opt-level = 's'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = "debuginfo"    # Strip debug info.
overflow-checks = true # Panic in the case of an overflow.

[lib]
crate-type = ["cdylib", "lib"]
